Centered the menu on the list bottom and pushed the other to the far right

--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
         <p>5 items left</p>
       </div>
 
-      <div id="todo-list-container-bottom-menu-right">
+      <div id="todo-list-container-bottom-menu-middle">
         <a href="#">All</a>
         <a href="#">Active</a>
-        <a href="#">Completed</a>
+        <a href="#">Completed</a>        
+      </div>
+
+      <div id="todo-list-container-bottom-menu-right">
         <a href="#">Clear Completed</a>
       </div>
     </div>
