Added the background image and color

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
     <img src="./images/icon-sun.svg" alt="Sun icon" class="Sun-icon">
   </div>
 
-  <div id="todo-list-container">
+  <div class="todo-list-container">
     <div id="todo-list">
       <ul>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox">Jog around the park 3x</label>
+          <input type="checkbox" id="checkbox-1">
+          <label for="checkbox-1">Jog around the park 3x</label>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox">10 minutes meditation</label>
+          <input type="checkbox" id="checkbox-2">
+          <label for="checkbox-2">10 minutes meditation</label>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox">Read for 1 hour</label>
+          <input type="checkbox" id="checkbox-3">
+          <label for="checkbox-3">Read for 1 hour</label>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox">Pick up groceries</label>
+          <input type="checkbox" id="checkbox-4">
+          <label for="checkbox-4">Pick up groceries</label>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox">Complete Todo App on Frontend Mentor</label>
+          <input type="checkbox" id="checkbox-5">
+          <label for="checkbox-5">Complete Todo App on Frontend Mentor</label>
         </li>
       </ul>
 
