Added the creare new to do input on top of the list container

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
  <main>
   <div class="title">
-    <h2>Todo</h2>
+    <h2>TODO</h2>
     <img src="./images/icon-sun.svg" alt="Sun icon" class="Sun-icon">
+  </div>
+
+  <div class="todo-list-container-top">
+     <input type="checkbox" id="checkbox-0">
+    <input type="text" id="todo-input" placeholder="Create a new todo...">
   </div>
 
   <div class="todo-list-container">
