Added the script file for the drag and drop functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
+  <script src="./script.js"></script>
   <title>Frontend Mentor | Todo app</title>
 
 
@@ -27,7 +28,7 @@
   <div class="todo-list-container">
     <div id="todo-list">
       <ul>
-        <li>
+        <!-- <li>
           <input type="checkbox" id="checkbox-1">
           <label for="checkbox-1">Jog around the park 3x</label>
         </li>
@@ -46,7 +47,7 @@
         <li>
           <input type="checkbox" id="checkbox-5">
           <label for="checkbox-5">Complete Todo App on Frontend Mentor</label>
-        </li>
+        </li> -->
       </ul>
 
     </div>
